[package]
name = "first-project"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "first_project"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[profile.release]
opt-level = "z"           # Optimize for size
lto = "fat"              # Enable Link Time Optimization
codegen-units = 1        # Use a single codegen unit for better optimization


[dependencies]
anchor-lang = "0.31.0"
anchor-spl = "0.31.0"
solana-program = "2.1.0"

